2010-12-20 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Can add the marker ###ADGALLERY_GLOBAL### in the RTE content of tt_news
2010-10-21 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Initial release