@@ -15,7 +15,7 @@ $EM_CONF[$_EXTKEY] = array (
 	'description' => 'Multimedia gallery based on adgallery',
 	'category' => 'plugin',
 	'shy' => 0,
-	'version' => '1.0.1',
+	'version' => '1.0.2',
 	'dependencies' => '',
 	'conflicts' => '',
 	'priority' => '',
@@ -25,13 +25,13 @@ $EM_CONF[$_EXTKEY] = array (
 	'module' => '',
 	'state' => 'stable',
 	'uploadfolder' => 0,
-	'createDirs' => '',
+	'createDirs' => 'uploads/tx_adgallery',
 	'modify_tables' => '',
 	'clearcacheonload' => 0,
 	'lockType' => '',
-	'author' => 'CERDAN Yohann',
+	'author' => 'CERDAN Yohann [Site-nGo]',
 	'author_email' => 'cerdanyohann@yahoo.fr',
-	'author_company' => 'Site\'nGO',
+	'author_company' => '',
 	'CGLcompliance' => NULL,
 	'CGLcompliance_note' => NULL,
 );
