@@ -10,11 +10,14 @@
             <label index="pi1_plus_wiz_description"></label>
             <label index="selectgallery">Choose a "adgallery" plugin</label>
             <label index="flexformpi1.displayType">Display mode</label>
-            <label index="flexformpi1.displayType.0">Choose...</label>
+            <label index="flexformpi1.displayType.0">Choose some images</label>
             <label index="flexformpi1.displayType.1">DAM directory</label>
             <label index="flexformpi1.displayType.2">DAM category</label>
             <label index="flexformpi1.displayType.3">Classic directory</label>
             <label index="flexformpi1.imagespath">Images path</label>
+            <label index="flexformpi1.images">Images</label>
+            <label index="flexformpi1.imagestitles">Images Titles</label>
+            <label index="flexformpi1.imagesalttexts">Images Alternative Texts</label>
             <label index="flexformpi1.htmltemplate">Path to the HTML template</label>
             <label index="flexformpi1.effect">Effect</label>
             <label index="flexformpi1.js">JS File (to change the library)</label>
@@ -31,11 +34,14 @@
             <label index="pi1_plus_wiz_description"></label>
             <label index="selectgallery">Selectionner un plugin "adgallery"</label>
             <label index="flexformpi1.displayType">Mode d'affichage</label>
-            <label index="flexformpi1.displayType.0">Selectionner...</label>
+            <label index="flexformpi1.displayType.0">Sélectionner des images</label>
             <label index="flexformpi1.displayType.1">Répertoire DAM</label>
             <label index="flexformpi1.displayType.2">Catégorie DAM</label>
             <label index="flexformpi1.displayType.3">Répertoire classique</label>
             <label index="flexformpi1.imagespath">Chemin des images</label>
+            <label index="flexformpi1.images">Images</label>
+            <label index="flexformpi1.imagestitles">Titre des images</label>
+            <label index="flexformpi1.imagesalttexts">Texte alternatif des images</label>
             <label index="flexformpi1.htmltemplate">Fichier de template HTML</label>
             <label index="flexformpi1.effect">Effet</label>
             <label index="flexformpi1.js">Fichier JS (pour changer de librairie)</label>
