@@ -62,6 +62,48 @@
                             </config>
                         </TCEforms>
                     </classicimagespath>
+                    <classicimages>
+						<TCEforms>
+							<displayCond>FIELD:displayType:=:0</displayCond>
+							<label>LLL:EXT:adgallery/locallang.xml:flexformpi1.images</label>
+							<config>
+								<type>group</type>
+								<internal_type>file</internal_type>
+								<allowed>files</allowed>
+								<size>12</size>
+								<maxitems>1000</maxitems>
+								<minitems>0</minitems>
+								<show_thumbs>1</show_thumbs>
+								<allowed>gif,jpg,jpeg,png</allowed>
+								<max_size>10240</max_size>
+								<uploadfolder>uploads/tx_adgallery</uploadfolder>
+							</config>
+						</TCEforms>
+					</classicimages>
+                    <classicimagestitles>
+                    	<TCEforms>
+                    		<displayCond>FIELD:displayType:=:0</displayCond>
+                            <label>LLL:EXT:adgallery/locallang.xml:flexformpi1.imagestitles</label>
+                            	<config>
+                            		<type>text</type>
+                            		<cols>30</cols>
+                            		<rows>5</rows>
+                            		<wrap>OFF</wrap>
+                            	</config>
+                    	</TCEforms>
+                    </classicimagestitles>
+                    <classicimagesalttexts>
+                    	<TCEforms>
+                    		<displayCond>FIELD:displayType:=:0</displayCond>
+                            <label>LLL:EXT:adgallery/locallang.xml:flexformpi1.imagesalttexts</label>
+                            	<config>
+                            		<type>text</type>
+                            		<cols>30</cols>
+                            		<rows>5</rows>
+                            		<wrap>OFF</wrap>
+                            	</config>
+                    	</TCEforms>
+                    </classicimagesalttexts>
                     <imagespath>
                         <TCEforms>
                             <displayCond>FIELD:displayType:=:1</displayCond>
