@@ -15,7 +15,12 @@ IMAGES LIST
 <script type="text/javascript">
     $(document).ready(function()
                       {
-                          $('.ad-gallery').adGallery({width:'###WIDTH###',height:'###HEIGHT###',effect:'###EFFECT###',slideshow:{enable:true,autostart:true,speed:3000,start_label:'Lecture',stop_label:'Pause'}});
+                          $('.ad-gallery').adGallery({
+                                                         width:'###WIDTH###',
+                                                         height:'###HEIGHT###',
+                                                         effect:'###EFFECT###',
+                                                         slideshow:{enable:true,autostart:true,speed:3000,start_label:'Lecture',stop_label:'Pause'}
+                                                     });
                       });
 </script>
 <div id="ad-gallery" class="ad-gallery">
